[package]
name = "screen_melt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
macroquad = "0.3.25"
rand = "0.8.5"
is_elevated = "0.1.2"

[profile.dev.package.'*']
opt-level = 3

[dependencies.windows]
version = "0.48"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse", 
	"Win32_Foundation",
	"Win32_System_WindowsProgramming",
	"Win32_UI_Shell",
	"Win32_System_Com",

]
